# libchipcard

./: .cvsignore  .gitignore  0BUILD  COPYING  CVSLOG  ChangeLog  ChangeLog.old  Doxyfile.in  Makefile.am  Makefile.cvs  NEWS  README  TODO  chipcard-config.in.in  chipcard.m4  chipcard2-client-config.in.in  chipcard2-client.m4  chipcard2-server-config.in.in  chipcard2-server.m4  chipcard2-server.spec.in  chipcard2.spec.in  chipcard3-config.in.in  chipcard3.m4  config.h.in  configure.ac  gource.sh  libchipcard-client.pc.in  libchipcard-server.pc.in  libchipcard.spec.in  libchipcard2.spec.in  libchipcard3.spec.in  merged-revisions.txt
data/apps/: Makefile.am  ddv0.xml  ddv1.xml  geldkarte.xml  kvk.xml  starcos-hvb.xml  starcos-vr.xml  starcos.xml
data/cards/: Makefile.am  card.xml  ddv0.xml  ddv1.xml  geldkarte.xml  kvk.xml  processorcard.xml  starcos.xml
data/drivers/ccid_ifd/: Makefile.am  card.xml  ccid_ifd.xml  ddv0.xml  ddv1.xml  driver.xml  kvk.xml  processorcard.xml  starcos.xml
data/drivers/cyberjack_ctapi/: Makefile.am  card.xml  cyberjack_ctapi.xml  ddv0.xml  ddv1.xml  driver.xml  geldkarte.xml  kvk.xml  processorcard.xml  starcos.xml
data/drivers/kobil_ctapi/: Makefile.am  card.xml  ddv0.xml  ddv1.xml  driver.xml  geldkarte.xml  kobil_ctapi.xml  kvk.xml  processorcard.xml  starcos.xml
data/drivers/orga_ctapi/: Makefile.am  ddv0.xml  ddv1.xml  driver.xml  kvk.xml  orga_ctapi.xml  processorcard.xml
data/drivers/scm33x_ifd/: Makefile.am  ddv0.xml  ddv1.xml  driver.xml  kvk.xml  processorcard.xml  scm33x_ifd.xml
data/drivers/tow_ctapi/: Makefile.am  ddv0.xml  ddv1.xml  driver.xml  kvk.xml  processorcard.xml  tow_ctapi.xml
doc/: CERTIFICATES  FAQ  IPCCOMMANDS  Makefile.am  apidoc.h  chipcardc2.conf.example  chipcardc2.conf.minimal  chipcardd2.conf.example  chipcardd2.conf.minimal  chipcardrd.conf.example  installation.sxi
etc/: Makefile.am  chipcardc.conf.default  chipcardc.conf.example  chipcardc3.conf.default  chipcardc3.conf.example  chipcardd  chipcardd.conf.default  chipcardd.conf.example  chipcardd.conf.slave  chipcardd.fedora  chipcardd3  chipcardd3.conf.default  chipcardd3.conf.example
src/crypttoken/: Makefile.am  ct_ddv.c  ct_ddv_p.h  ddv.xml.in
src/crypttoken/ddvcard/: Makefile.am  ddvcard.c  ddvcard.xml.in  ddvcard_p.h
src/crypttoken/starcoscard/: Makefile.am  starcoscard.c  starcoscard.xml.in  starcoscard_p.h
src/ct/: 0BUILD  Makefile.am  lcc_plugins.c  lcc_plugins.h
src/ct/chiptanusb/: .gitignore  0BUILD  Makefile.am  chiptanusb.c  chiptanusb.h  chiptanusb.xml.in  chiptanusb_p.h
src/ct/ddvcard/: .gitignore  0BUILD  Makefile.am  ddvcard.c  ddvcard.xml.in  ddvcard_p.h
src/ct/starcoscard/: .gitignore  0BUILD  Makefile.am  starcoscard.c  starcoscard.xml.in  starcoscard_p.h
src/ct/zkacard/: .gitignore  0BUILD  Makefile.am  zkacard.c  zkacard.xml.in  zkacard_p.h
src/drivers/ccid/: .cvsignore  Makefile.am  ccid.xml.in  driverccid.c  driverccid.h  driverccid_p.h  main.c  readerccid.c  readerccid_l.h  readerccid_p.h
src/drivers/ctapi/: .cvsignore  Makefile.am  ctapi.xml.in  driverctapi.c  driverctapi.h  driverctapi_p.h  main.c  readerctapi.c  readerctapi.h  readerctapi_p.h
src/drivers/ifd/: .cvsignore  Makefile.am  driverifd-old.c  driverifd.c  driverifd.h  driverifd_p.h  ifd.xml.in  main.c  readerifd.c  readerifd_l.h  readerifd_p.h
src/drivers/ifdold/: .cvsignore  Makefile.am  driverifdold.c  driverifdold.h  driverifdold_p.h  ifdold.xml.in  main.c
src/fake_ctapi/: Makefile.am  ctapi.c  ctapi.h  ctapi_p.h  ctapi_reader.c  ctapi_secure.c  ressource.rc.in
src/libchipcard/: .gitignore  0BUILD  Makefile.am  chipcard.h.in  libtest.c  version.h.in
src/libchipcard/PCSC/: Makefile.am  debuglog.h  ifdhandler.h
src/libchipcard/base/: .gitignore  0BUILD  Makefile.am  README.cards  card.c  card.h  card_data.c  card_files.c  card_imp.h  card_iso.c  card_l.h  card_p.h  client.c  client.h  client_cmd.c  client_cmd.h  client_io.c  client_l.h  client_p.h  client_xml.c  client_xml.h  driverinfo.c  driverinfo.h  driverinfo_p.h  misc.c  misc.h  msgengine.c  msgengine.h  msgengine_p.h  pininfo.xml  tlv.c  tlv.h  tlv_p.h
src/libchipcard/cards/: .gitignore  0BUILD  Makefile.am  card.xml  hidata.xml  hiinsurancedata.xml  hipersonaldata.xml
src/libchipcard/ct/: 0BUILD  Makefile.am  ct_card.c  ct_card.h
src/opensc/: Makefile.am  reader-libchipcard2.c  reader-libchipcard2_p.h
src/test/: .cvsignore  Makefile.am  cbtest.c  cbtest.h  cbtest_p.h  chipcardc.conf  lctest  lctest.c  lstest.c  lstest.conf
src/tools/: 0BUILD  Makefile.am
src/tools/cardcommander/: .cvsignore  .gitignore  0BUILD  Makefile.am  cardcommander.cpp
src/tools/chipcard-tool/: .cvsignore  .gitignore  0BUILD  Makefile.am  checkreaders.c  getatr.c  global.h  listreaders.c  main.c  monitor.c  vg_run.sh
src/tools/chipcardd/: Makefile.am  addreader.c  chipcardd.c  chipcardd_p.h  delreader.c  init.c  listreaders.c  mkcert.c  runme.sh  runme2.sh  testreader.c
src/tools/chipcardd2/: .cvsignore  Makefile.am  addreader.c  chipcardd2.c  chipcardd2_p.h  delreader.c  init.c  mkcert.c  runme.sh  runme2.sh  testreader.c
src/tools/chipcardrd/: .cvsignore  Makefile.am  chipcardrd.c  chipcardrd_p.h
src/tools/geldkarte/: .cvsignore  .gitignore  0BUILD  Makefile.am  geldkarte  global.h  main.c
src/tools/kvkcard/: .cvsignore  .gitignore  0BUILD  Makefile.am  daemon.c  global.h  main.c  psvd.c  rdpd.c  rdvd.c  read.c  testfile.txt
src/tools/memcard/: .cvsignore  .gitignore  0BUILD  Makefile.am  global.h  main.c
src/tools/rsacard/: .cvsignore  Makefile.am  activatekey.c  changepin.c  deactivatekey.c  exportbankinfo.c  exportkey.c  generatekey.c  global.h  importbankinfo.c  importkey.c  initialpin.c  main.c  test.info  test.key  test2.info  testkey.conf
src/tools/usbtan-test/: .gitignore  0BUILD  Makefile.am  main.c
src/tools/zkacard/: .gitignore  0BUILD  Makefile.am  addcontext.c  common.c  getpublickey.c  (+7 more)
tutorials/: .gitignore  Makefile.am  README  examplecard.c  examplecard.h  examplecard.xml  examplecard_p.h  tutorial1a.c  tutorial1b.c  tutorial1c.c  tutorial2.c  tutorial3.c
(+839 files in other folders)
